--- a/latex/main.tex
+++ b/latex/main.tex
@@ -77,6 +77,10 @@
 
 % SECTIONS ==========================================
 
+\section{Note about the project}
+In the beginning of February 2022, Troels Petersen (KU) and Lars Buchhave (DTU) started working 
+together to improve computational LFC calibration methods, and Troels invited me and a few other students to come along for the ride. During the project I've been exploring real data and developing a crude method for performing LFC calibrations and subsequent radial velocity extractions. With this project report it is my intent to share and explain the process of performing such analyses, thinking of the reader as a fellow physics student perhaps interested in picking up where I left off. 
+
 \section{Introduction}
 \input{sections/introduction} 
 
@@ -86,14 +90,17 @@
 \section{Data Analysis}
 \input{sections/data_analysis} 
 
-\section{(Results)}
-% \input{sections/results} 
+\section{Results}
+\input{sections/results} 
 
-\section{Discusion}
+\section{Discussion}
 \input{sections/discussion} 
 
 \section{Conclusion}
 % \input{sections/conclusion} 
+
+\section{Acknowledgements}
+
 
 % Bibliography
 \newpage
