--- a/rv_rms.ipynb
+++ b/rv_rms.ipynb
@@ -35,7 +35,7 @@
     "    for coord in tqdm(coords):\n",
     "        x = coord[0]\n",
     "        y = coord[1]\n",
-    "        matches = find_feature_matches2(features[x], features[y], apply_iqr_filter=True)\n",
+    "        matches = find_feature_matches2(features[x], features[y])\n",
     "\n",
     "        lambda1, lambda2 = [], []\n",
     "        for match in matches:\n",
