--- a/latex/sections/introduction.tex
+++ b/latex/sections/introduction.tex
@@ -1,9 +1,5 @@
 
-To discover Earth analogs around other stars, next generation spectrographs must measure radial velocity (RV) with 10 cm/s precision.
+The radial velocity method was used to discover the first exoplanets and continues to be one of the main methods for the discovery and characterization exoplanets \cite{radial_velocity_techniques}. With new extreme-precision radial velocity (EPRV) spectrographs such as the EXtreme PREcision Spectrograph (EXPRES), data from which this project is based on, we are slowly approaching the precision necessary for the discovery of Earth-sized planets around Sun-like stars. For this to succeed, it is however necessary to understand and mitigate many effects, such as the movement of the Earth relative to the center of mass of the solar system (barycentric corrections), light scattering in the Earth's atmosphere (tellurics) and light scattering inside the spectrograph (blaze). 
+A general wavelength calibration of the spectrograph is also needed, the quality of which of course directly influences the precision of the final radial velocities that can be obtained. For that purpose, EXPRES utilizes a Laser Frequency Comb (LFC), is a rather new technique. While to extract radial velocities (RV) we measure the apparent wavelength shift between observations over a period of time, preferably more than a year, and utilize the well-known doppler effect. 
 
-The radial velocity method was used to discover the first exoplanets and continues to be one of the main methods for the discovery and characterization exoplanets \cite{radial_velocity_techniques}. With new extreme-precision spectrographs such as EXPRES, we are slowly approaching the precision necessary for the discovery of Earth-sized planets around Sun-like stars. To achieve such precision however, it is necessary to understand and mitigate many effects. This includes the movement of the Earth relative to the center of mass of the solar system (bary-centric corrections), light scattering in the Earth's atmosphere (tellurics), light scattering inside the spectrograph (blaze). Furthermore a general wavelength calibration of the spectrograph data is needed, the quality of which of course directly influences the precision of the final radial velocities that can be obtained. To perform this calibration on the EXPRES spectrograph a laser frequency comb (LFC) is used. The full procedure from raw data to results, also spoken of as the pipeline, is extensive and described in more detail in \cite{first_RV_from_EXPRES}. This project mainly revolves around performing the calibration and subsequent computation of the radial velocities, and will ignore remaining parts of the pipeline by using already corrected data. The aim of this project is method exploration and development, and not exoplanet detection.
-
-\vspace{0.5cm}
-\todo{} Write that the EXPRES pipeline is very long and complicated and in this paper I will describe a few basic things in the pibeline along with the few things that I have actually worked on.
-
-\todo{}Write that this paper is intented as an introduction to other students with similar backgrounds to mine interested in working with LFC calib and RV extractions, giving an overview of the data, the problem, and the specific things that I have tried, in hope that it can kickstart their understanding of the project.
+The full procedure from raw data to results, also referred to as the \emph{pipeline} in the literature, is extensive and complex, which is why I've ignored many aspects of it during this project. I've worked directly on the LFC calibration and RV extractions and tried to orient myself about the most important corrections, thus that is what I will describe in this report. The full pipeline is described in detail in \cite{first_RV_from_EXPRES}. 
